# g_poke_t

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env_example  main.py  pyproject.toml
data/clean_texts/: 01_pokemon_for_kids.txt  02_pokemon_for_teens.txt  03_pokemon_for_scientists.txt  04_pokemon_for_educators.txt  05_pokemon_for_economists.txt  06_pokemon_psychologists.txt  07_pokemon_biologists_ecologists.txt  08_pokemon_practical_guides.txt  09_pokemon_FAQ_format.txt  10_pokemon_comparisons.txt  11_pokemon_case_studies.txt  12_pokemon_glossary_dictionary.txt  13_pokemon_competitive_roles.txt  14_pokemon_advanced_AI_ML_technical.txt  15_pokemon_dialogues_conversations.txt  16_pokemon_methodology_document.txt  bulbapedia_bulbagarden_netwiki_Trainer_Tips.txt  pokemon-para-cientificos.txt  pokemon-para-ninos.txt  pokemon-para-preparatoria.txt  www_dragonflycave_commechanics_battling-basics.txt  www_puiching_blogpuichinggazette_beginner-pokmon-trainer-guide.txt
docs/: TDD.MD  checklist.md  commands.md
src/: app_streamlit.py  build_graph_from_mongo.py  consolidate_pokedex_batches.py  fetch_type_relations.py  flatten_pokedex.py  generate_answer.py  graph_query.py  hybrid_index_qdrant.py  hybrid_search_qdrant.py  ingest_pokeapi_dlt_structured.py  ingest_pokeapi_dlt_v2.py  intent_router.py  load_to_mongo.py  load_to_neo4j.py  mongo_query.py  normalize_mongo_data.py  simple_scraper.py  smart_chunking.py
